@@ -23,7 +23,7 @@
  * Authors: the Amanda Development Team.  Its members are listed in a
  * file named AUTHORS, in the root directory of this distribution.
  */
-/* $Id: taper.c,v 1.47 1998/11/04 04:13:04 oliva Exp $
+/* $Id: taper.c,v 1.48 1998/11/17 18:12:06 jrj Exp $
  *
  * moves files from holding disk to tape, or from a socket to tape
  */
@@ -74,6 +74,7 @@ int conf_tapebufs;
 #define THRESHOLD	1
 
 #define CONNECT_TIMEOUT 2*60
+#define DATABUF_SIZE	TAPE_BLOCK_BYTES
 
 
 
@@ -320,7 +321,8 @@ int rdpipe, wrpipe;
 	    datestamp = stralloc(argv[6]);
 
 	    data_port = 0;
-	    data_socket = stream_server(&data_port);
+/*	    data_socket = stream_server(&data_port);	*/
+	    data_socket = stream_server(&data_port, DEFAULT_SIZE, DATABUF_SIZE);	
 	    putresult("PORT %d\n", data_port);
 
 	    if((fd = stream_accept(data_socket, CONNECT_TIMEOUT,
